--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -47,6 +47,7 @@ $drp-list-item-border-hover: 2px solid $company-theme-color;
 //nav-form
 $nav-form-height: $nav-height;
 $nav-form-width: 200px;
+$nav-from-width-phone: 100px;
 $nav-form-ipt-height: 30px;
 $nav-form-ipt-padding: 3px 8px 3px 40px;
 $nav-form-margin: 0 50px 0 0;
