--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2285,6 +2285,9 @@ body {
   width: 200px;
   height: 60px;
   vertical-align: top; }
+  @media screen and (max-width: 415px) {
+    .nav-form {
+      width: 100px; } }
   .nav-form input.search {
     position: absolute;
     top: 50%;
@@ -2583,6 +2586,11 @@ body {
   display: block;
   margin: 45px 0 0 10px;
   padding: 0 15px; }
+  @media screen and (max-width: 415px) {
+    .contact-group {
+      margin: 0;
+      width: 100%;
+      padding: 0; } }
   .contact-group .title {
     padding-left: 5px;
     color: #292059;
@@ -2835,6 +2843,10 @@ table.contact-table {
   .phoneHidden {
     display: none !important; } }
 
+@media screen and (max-width: 480px) {
+  .phoneShow-inline-block {
+    display: block !important; } }
+
 .news-area {
   margin-top: 139px;
   padding-bottom: 40px; }
@@ -3003,6 +3015,11 @@ table.contact-table {
     display: table; }
   #contacts-content:after {
     clear: both; }
+  @media screen and (max-width: 415px) {
+    #contacts-content {
+      margin: 0 auto;
+      width: 100%;
+      min-width: 375px; } }
 
 #contacts-content {
   margin-bottom: 150px; }
