--- a/public/stylesheets/components/_contacts.scss
+++ b/public/stylesheets/components/_contacts.scss
@@ -2,7 +2,11 @@
   @include relativeblock;
   margin: $contact-group-margin;
   padding: $contact-group-padding;
-
+  @media screen and (max-width: $phone-width){
+    margin: 0;
+    width: 100%;
+    padding: 0;
+  }
   .title {
     padding-left: 5px;
     color: $contact-group-title-color;
