--- a/public/stylesheets/components/_nav.scss
+++ b/public/stylesheets/components/_nav.scss
@@ -121,6 +121,9 @@
   width: $nav-form-width;
   height: $nav-form-height;
   vertical-align: top;
+  @media screen and (max-width: $phone-width) {
+    width: $nav-from-width-phone;
+  }
   input.search {
     position: absolute;
     top: 50%;
