--- a/public/stylesheets/components/_vals.scss
+++ b/public/stylesheets/components/_vals.scss
@@ -211,3 +211,6 @@ $chip-height: 32px;
 $chip-margin: 0 5px 5px 0;
 $chip-padding: 0 12px;
 $chip-color: rgba(0,0,0,.6);
+
+//selects
+$select-title-margin: 10px 0;
