--- a/public/stylesheets/intranet.scss
+++ b/public/stylesheets/intranet.scss
@@ -15,6 +15,7 @@
 @import "components/tab";
 @import "components/contacts";
 @import "components/chips";
+@import "components/selects";
 @import "components/footer";
 //items
 @import "components/slideimgs";
