--- a/public/stylesheets/intranet.css
+++ b/public/stylesheets/intranet.css
@@ -2661,6 +2661,17 @@ table.contact-table {
     color: #eeeeee;
     background-color: #292059; }
 
+.amSelects .select-group {
+  display: block;
+  clear: both; }
+  .amSelects .select-group .title {
+    display: block;
+    margin: 10px 0; }
+  .amSelects .select-group .amSelect {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #9e9e9e; }
+
 .default-footer {
   position: fixed;
   width: 100%;
@@ -2756,6 +2767,8 @@ table.contact-table {
     clear: both; }
   .slide-show-container-h .slide-item {
     position: relative;
+    white-space: nowrap;
+    display: inline-block;
     text-decoration: none;
     box-sizing: border-box;
     position: relative;
@@ -2773,11 +2786,9 @@ table.contact-table {
       height: 100%; }
     @media screen and (max-width: 415px) {
       .slide-show-container-h .slide-item {
-        width: 49.9%;
+        width: 30%;
         margin: 0;
-        padding: 0; }
-        .slide-show-container-h .slide-item .img {
-          padding-top: 55.5%; } }
+        padding: 0; } }
 
 .popbox {
   position: fixed;
@@ -2928,7 +2939,9 @@ table.contact-table {
   padding: 30px 0 30px 0; }
 
 .slide-show-container-h {
-  display: block; }
+  display: block;
+  position: absolute;
+  overflow-x: auto; }
   .slide-show-container-h .slide-item {
     position: relative;
     width: 180px;
