--- a/public/stylesheets/pages/index.scss
+++ b/public/stylesheets/pages/index.scss
@@ -66,7 +66,8 @@
 }
 .slide-show-container-h{
   display: block;
-
+  position: absolute;
+  overflow-x: auto;
   .slide-item {
     position: relative;
     width: $or-slide-item-width;
